--- a/front-end/src/css/style.css
+++ b/front-end/src/css/style.css
@@ -1,5 +1,36 @@
-div {
-  width: 100px;
-  height: 100px;
-  background-color: red;
+body {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 240px;
+  background-color: #f7e095;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+li a {
+  display: flex;
+  color: #000;
+  padding: 8px 32px;
+  text-decoration: none;
+  align-items: center;
+}
+
+li a:hover:not(.active) {
+  background-color: rgb(225, 138, 138);
+  color: white;
+  justify-content: baseline;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  width: 160px;
+}
+
+img {
+  display: flex;
+  left: 100px;
 }
